--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "build": "webpack",
-    "start": "webpack-dev-server --open"
+    "build": "npm run clean && webpack && npm run build:lambdas",
+    "build:lambdas": "netlify-lambda build src/functions/",
+    "start": "npm run clean && webpack-dev-server --open --mode=development",
+    "start:lambdas": "netlify-lambda serve src/functions/",
+    "clean": "rimraf dist"
   },
   "keywords": [],
   "author": "",
@@ -16,8 +19,14 @@
     "@babel/preset-env": "^7.2.0",
     "babel-loader": "^8.0.4",
     "html-webpack-plugin": "^3.2.0",
+    "netlify-cli": "^2.5.0",
+    "netlify-lambda": "^1.1.0",
+    "rimraf": "^2.6.2",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
+  },
+  "dependencies": {
+    "pusher": "^2.2.0"
   }
 }
