pusher based lobby

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,6 @@ ID = "7c11bd1d-a5d2-4854-bbab-1c0801b0c74b"
   command = "npm run build"
   # Directory with lambda functions
   functions = "functions/"
+[[redirects]]
+  from = '/*'
+  to = '/index.html'
