--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "npm run clean && webpack && npm run build:lambdas",
     "build:lambdas": "netlify-lambda build src/functions/",
-    "start": "npm run clean && webpack-dev-server --open --mode=development",
+    "start": "npm run clean && webpack-dev-server --mode=development",
     "start:lambdas": "netlify-lambda serve src/functions/",
     "clean": "rimraf dist"
   },
@@ -16,7 +16,9 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
     "html-webpack-plugin": "^3.2.0",
     "netlify-cli": "^2.5.0",
@@ -27,8 +29,11 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "dotenv": "^6.2.0",
     "pusher": "^2.2.0",
-    "pusher-js": "^4.3.1"
+    "pusher-js": "^4.3.1",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3"
   }
 }
