--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "dotenv": "^6.2.0",
+    "faker": "^4.1.0",
     "pusher": "^2.2.0",
     "pusher-js": "^4.3.1",
     "react": "^16.6.3",
