--- a/package.json
+++ b/package.json
@@ -19,11 +19,19 @@
     "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.4.2",
     "babel-loader": "^8.0.4",
+    "css-loader": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "netlify-cli": "^2.5.0",
     "netlify-lambda": "^1.1.0",
+    "node-sass": "^4.11.0",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "resolve-url-loader": "^3.0.0",
     "rimraf": "^2.6.2",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
